# hybrid-rag-pivot-attacks

./: .env.example  .gitignore  HYBRID_RAG_SECURITY_RESEARCH_REPORT.md  LICENSE  README.md  RESEARCH_COMPILATION.md  SECURITY.md  When does hybrid RAG amplify retrieval risk, and h.md  docker-compose.yml  hybrid_rag_retrieval_pivot_attacks_plan.md  notes.md  pyproject.toml
configs/datasets/: enron_email.yaml  sec_edgar.yaml  sensitivity_tiers.yaml  synthetic_enterprise.yaml
configs/experiments/: full_evaluation.yaml
configs/gcp/: project.yaml
configs/pipelines/: graph_only.yaml  hybrid_baseline.yaml  hybrid_defenses.yaml  vector_only.yaml
data/queries/: adversarial.json  adversarial_500.json  benign.json  benign_500.json
docs/: ARCHITECTURE.md  HANDOFF.md  SETUP.md
infra/scripts/: setup_gce.sh  teardown.sh
infra/terraform/: gce.tf  gcs.tf  iam.tf  main.tf  neo4j.tf  network.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
notebooks/: 01_explore_dataset.ipynb  02_attack_analysis.ipynb  03_results_plots.ipynb
paper/: Makefile  README.txt  main-anonymous.tex  main.tex  references.bib
results/: experiment_summary.csv
results/checkpoints/: adaptive_synthetic.json  baseline_enron.json  baseline_synthetic.json  generation_synthetic.json  topology_synthetic.json
results/latex/: adaptive_attacks.tex  attack_heatmap.tex  attack_results.tex  cross_dataset_baseline.tex  defense_ablation.tex  embedding_sensitivity.tex  generation_contamination.tex  latency.tex  organic_leakage.tex
results/tables/: adaptive_attacks_synthetic_20260208_163947.json  connectivity_sweep_20260207_215532.json  connectivity_sweep_synthetic_20260208_163949.json  embedding_sensitivity.json  experiment_adversarial_20260207_071746.json  experiment_adversarial_20260207_071814.json  experiment_adversarial_20260207_074342.json  (+26 more)
scripts/: analyze_organic_leakage.py  build_indexes.py  export_results.py  generate_queries.py  ingest_enron.py  load_processed.py  make_synth_data.py  run_adaptive_attacks.py  run_all_experiments.sh  run_attack_experiments.py  run_experiments.py  run_full_evaluation.py  run_generation_eval.py  run_sweep_experiments.py
tests/: conftest.py  test_adaptive_attacks.py  test_attacks.py  test_config.py  test_dataset_adapters.py  test_defenses.py  test_generation.py  test_graph.py  test_ingestion.py  test_metrics.py  test_pipeline_integration.py  test_pipelines.py  test_vector.py
(+52 files in other folders)
