[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pivorag"
version = "0.1.0"
description = "Retrieval Pivot Attacks in Hybrid RAG: Measuring and Mitigating Amplified Leakage from Vector Seeds to Graph Expansion"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Scott Thornton", email = "scthornton@gmail.com" },
]
keywords = ["rag", "security", "knowledge-graph", "hybrid-rag", "adversarial-ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Vector store
    "chromadb~=0.5.0",
    # Graph database
    "neo4j~=5.20.0",
    # Embeddings
    "sentence-transformers~=3.0.0",
    # NER and NLP
    "spacy~=3.7.0",
    # Config and data models
    "pydantic~=2.7.0",
    "pydantic-settings~=2.3.0",
    "pyyaml~=6.0",
    "python-dotenv~=1.0.0",
    # Data processing
    "numpy~=1.26.0",
    "pandas~=2.2.0",
    "scikit-learn~=1.5.0",
    # Graph algorithms (offline analysis)
    "networkx~=3.3",
    # Synthetic data generation
    "faker~=28.0.0",
    # Visualization
    "matplotlib~=3.9.0",
    "seaborn~=0.13.0",
    # CLI
    "click~=8.1.0",
    # Tokenization (for chunk sizing)
    "tiktoken~=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]
llm = [
    "openai~=1.40.0",
    "anthropic~=0.34.0",
]
gpu = [
    "torch>=2.3.0",
]

[project.scripts]
pivorag = "pivorag.eval.run_eval:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pivorag"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring Neo4j/ChromaDB connections",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
